--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/cv">CV</a></li>
+				<li><a href="/teaching">Teaching</a></li>
+				<li><a href="/research">Research</a></li>
+			</ul>
 			</nav>
 			<div class="container">
 			
@@ -21,8 +22,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:samaramendez@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
 				</ul>
 			</footer>
 		</body>
