--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,12 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<h2> Samara Mendez  </h2>
 			<nav>
 	    		<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
-				<li><a href="/cv">CV</a></li>
+				<li><a href="/mendez_cv_2_18.pdf">CV</a></li>
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/research">Research</a></li>
 			</ul>
