--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
 	    		<ul>
 	        		<li><a href="mailto:samaramendez@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
-				</ul>
+				<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
+			</ul>
 			</footer>
 		</body>
 	</html>
