--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 	    		<ul>
 	        		<li><a href="mailto:samaramendez@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
-				<li><a href="https://github.com/samaramendez">github.com/samaramendez</a></li>
+				<li><a href="https://www.linkedin.com/in/samara-mendez-97741750">Linkedin</a></li>
 			</ul>
 			</footer>
 		</body>
