--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
-				<li><a href="/mendez_cv_2_28.pdf">CV</a></li>
+				<li><a href="/mendez_cv.pdf">CV</a></li>
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/research">Research</a></li>
 			</ul>
